force-app/main/default/objects/Case_Task__c/Case_Task__c.object-meta.xml
<CustomObject>
    <description>ケースで受け取った問い合わせを各販売担当が対応するためのケースです。</description>
    <label>対応タスク（販売）</label>
    <nameField>
        <label>対応タスク（販売）</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>