force-app/main/default/objects/Case_Task__c/fields/address__c.field-meta.xml
<CustomField>
    <fullName>address__c</fullName>
    <label>住所</label>
    <length>255</length>
    <type>Text</type>
</CustomField>