force-app/main/default/objects/Case_Task__c/fields/Approval_datetime__c.field-meta.xml
<CustomField>
    <fullName>Approval_datetime__c</fullName>
    <label>承認日時</label>
    <type>DateTime</type>
</CustomField>