force-app/main/default/objects/Case_Task__c/fields/Approval_request_destination__c.field-meta.xml
<CustomField>
    <fullName>Approval_request_destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>承認依頼先</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Approval_request_destination</relationshipName>
    <type>Lookup</type>
</CustomField>