force-app/main/default/objects/Case_Task__c/fields/approver__c.field-meta.xml
<CustomField>
    <fullName>approver__c</fullName>
    <label>承認者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>