force-app/main/default/objects/Case_Task__c/fields/ASAP__c.field-meta.xml
<CustomField>
    <fullName>ASAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>至急</label>
    <type>Checkbox</type>
</CustomField>