force-app/main/default/objects/Case_Task__c/fields/auctiondata_car__c.field-meta.xml
<CustomField>
    <fullName>auctiondata_car__c</fullName>
    <formula>kanrinum__r.Model__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種</label>
    <type>Text</type>
</CustomField>