force-app/main/default/objects/Case_Task__c/fields/auctiondata_Chassis__c.field-meta.xml
<CustomField>
    <fullName>auctiondata_Chassis__c</fullName>
    <formula>kanrinum__r.Chassis_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車台番号</label>
    <type>Text</type>
</CustomField>