force-app/main/default/objects/Case_Task__c/fields/auctiondata_lot__c.field-meta.xml
<CustomField>
    <fullName>auctiondata_lot__c</fullName>
    <formula>kanrinum__r.Lot_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ロット番号</label>
    <type>Text</type>
</CustomField>