force-app/main/default/objects/Case_Task__c/fields/Car__c.field-meta.xml
<CustomField>
    <fullName>Car__c</fullName>
    <label>旧車種</label>
    <length>255</length>
    <type>Text</type>
</CustomField>