force-app/main/default/objects/Case_Task__c/fields/car_name__c.field-meta.xml
<CustomField>
    <fullName>car_name__c</fullName>
    <formula>ss_offer_info__r.car_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>車種（ワンプラ）</label>
    <type>Text</type>
</CustomField>