force-app/main/default/objects/Case_Task__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ケース</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>case</relationshipName>
    <type>Lookup</type>
</CustomField>