force-app/main/default/objects/Case_Task__c/fields/chassis_no_verified__c.field-meta.xml
<CustomField>
    <fullName>chassis_no_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>車台番号確認済</label>
    <type>Checkbox</type>
</CustomField>