force-app/main/default/objects/Case_Task__c/fields/Compliance_deadline__c.field-meta.xml
<CustomField>
    <fullName>Compliance_deadline__c</fullName>
    <label>対応期限</label>
    <type>DateTime</type>
</CustomField>