force-app/main/default/objects/Case_Task__c/fields/contact_delay_flag__c.field-meta.xml
<CustomField>
    <fullName>contact_delay_flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3時間以上経過</label>
    <type>Checkbox</type>
</CustomField>