force-app/main/default/objects/Case_Task__c/fields/contact_person__c.field-meta.xml
<CustomField>
    <fullName>contact_person__c</fullName>
    <label>連絡先担当者</label>
    <length>255</length>
    <type>Text</type>
</CustomField>