force-app/main/default/objects/Case_Task__c/fields/Corresponding_department__c.field-meta.xml
<CustomField>
    <fullName>Corresponding_department__c</fullName>
    <label>対応部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>