force-app/main/default/objects/Case_Task__c/fields/create_new_lot__c.field-meta.xml
<CustomField>
    <fullName>create_new_lot__c</fullName>
    <label>新ロットの作成</label>
    <length>255</length>
    <type>Text</type>
</CustomField>