force-app/main/default/objects/Case_Task__c/fields/Createddate__c.field-meta.xml
<CustomField>
    <fullName>Createddate__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>作成日</label>
    <type>DateTime</type>
</CustomField>