force-app/main/default/objects/Case_Task__c/fields/currency__c.field-meta.xml
<CustomField>
    <fullName>currency__c</fullName>
    <description>Paypal請求依頼を出すときに使用。</description>
    <label>通貨</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>円</fullName>
            </value>
            <value>
                <fullName>ドル</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>