force-app/main/default/objects/Case_Task__c/fields/current_location__c.field-meta.xml
<CustomField>
    <fullName>current_location__c</fullName>
    <label>現在地</label>
    <length>255</length>
    <type>Text</type>
</CustomField>