force-app/main/default/objects/Case_Task__c/fields/Custom_activity__c.field-meta.xml
<CustomField>
    <fullName>Custom_activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>活動（販売用）</label>
    <referenceTo>Custom_activity__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>Custom_activity_for_Case_Task</relationshipName>
    <type>Lookup</type>
</CustomField>