force-app/main/default/objects/Case_Task__c/fields/Delivery_destination__c.field-meta.xml
<CustomField>
    <fullName>Delivery_destination__c</fullName>
    <label>搬入先</label>
    <length>255</length>
    <type>Text</type>
</CustomField>