force-app/main/default/objects/Case_Task__c/fields/delivery_notes__c.field-meta.xml
<CustomField>
    <fullName>delivery_notes__c</fullName>
    <label>配送注記</label>
    <length>255</length>
    <type>Text</type>
</CustomField>