force-app/main/default/objects/Case_Task__c/fields/destination_department_sales__c.field-meta.xml
<CustomField>
    <fullName>destination_department_sales__c</fullName>
    <label>依頼先部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>