force-app/main/default/objects/Case_Task__c/fields/division__c.field-meta.xml
<CustomField>
    <fullName>division__c</fullName>
    <label>分割回数</label>
    <length>255</length>
    <type>Text</type>
</CustomField>