force-app/main/default/objects/Case_Task__c/fields/document_change_cancel_request__c.field-meta.xml
<CustomField>
    <fullName>document_change_cancel_request__c</fullName>
    <formula>TEXT(task_oya__r.document_change__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>キャンセル依頼から自動反映しています。</inlineHelpText>
    <label>書類対応依頼（キャンセル依頼から取得）</label>
    <type>Text</type>
</CustomField>