force-app/main/default/objects/Case_Task__c/fields/EscalationDateTime__c.field-meta.xml
<CustomField>
    <fullName>EscalationDateTime__c</fullName>
    <inlineHelpText>対応タスクの対応期限
※土日祝を除いて、届いてから3時間以内</inlineHelpText>
    <label>エスカレーション期限</label>
    <type>DateTime</type>
</CustomField>