force-app/main/default/objects/Case_Task__c/fields/external_id__c.field-meta.xml
<CustomField>
    <fullName>external_id__c</fullName>
    <label>外部キー</label>
    <length>255</length>
    <type>Text</type>
</CustomField>