force-app/main/default/objects/Case_Task__c/fields/file__c.field-meta.xml
<CustomField>
    <fullName>file__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>ケースに添付ファイルがあるかどうか。</inlineHelpText>
    <label>添付ファイルの有無</label>
    <type>Checkbox</type>
</CustomField>