force-app/main/default/objects/Case_Task__c/fields/finish_date__c.field-meta.xml
<CustomField>
    <fullName>finish_date__c</fullName>
    <description>フローで自動反映</description>
    <label>完了日</label>
    <type>DateTime</type>
</CustomField>