force-app/main/default/objects/Case_Task__c/fields/invoice_info1__c.field-meta.xml
<CustomField>
    <fullName>invoice_info1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する請求情報1</label>
    <referenceTo>invoice_info__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>invoice_info1</relationshipName>
    <type>Lookup</type>
</CustomField>