force-app/main/default/objects/Case_Task__c/fields/invoice_info3__c.field-meta.xml
<CustomField>
    <fullName>invoice_info3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する請求情報3</label>
    <referenceTo>invoice_info__c</referenceTo>
    <relationshipLabel>対応タスク（販売） (関連する請求情報3)</relationshipLabel>
    <relationshipName>invoice_info3</relationshipName>
    <type>Lookup</type>
</CustomField>