force-app/main/default/objects/Case_Task__c/fields/irregular__c.field-meta.xml
<CustomField>
    <fullName>irregular__c</fullName>
    <label>イレギュラー対応</label>
    <length>255</length>
    <type>Text</type>
</CustomField>