force-app/main/default/objects/Case_Task__c/fields/kanrinum__c.field-meta.xml
<CustomField>
    <fullName>kanrinum__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>ケースから連携。メールに管理番号を含まれていた場合、こちらに連携</description>
    <inlineHelpText>問い合わせ時に含まれていた、管理番号</inlineHelpText>
    <label>オークション出品データ</label>
    <referenceTo>Auction_Data__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>dWOf</relationshipName>
    <type>Lookup</type>
</CustomField>