force-app/main/default/objects/Case_Task__c/fields/kanrinum_text__c.field-meta.xml
<CustomField>
    <fullName>kanrinum_text__c</fullName>
    <label>管理番号（テキスト）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>