force-app/main/default/objects/Case_Task__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連する未会員リード</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>Activity_for_Lead</relationshipName>
    <type>Lookup</type>
</CustomField>