force-app/main/default/objects/Case_Task__c/fields/logistics_company__c.field-meta.xml
<CustomField>
    <fullName>logistics_company__c</fullName>
    <label>陸送業者</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>自社</fullName>
            </value>
            <value>
                <fullName>外注</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>