force-app/main/default/objects/Case_Task__c/fields/Mail__c.field-meta.xml
<CustomField>
    <fullName>Mail__c</fullName>
    <inlineHelpText>問い合わせ時のメールアドレス。必ずしも会員情報と一致するわけではない。</inlineHelpText>
    <label>メールアドレス</label>
    <type>Email</type>
</CustomField>