force-app/main/default/objects/Case_Task__c/fields/main_category__c.field-meta.xml
<CustomField>
    <fullName>main_category__c</fullName>
    <label>依頼カテゴリ（社内タスク）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>