force-app/main/default/objects/Case_Task__c/fields/maker_name__c.field-meta.xml
<CustomField>
    <fullName>maker_name__c</fullName>
    <formula>ss_offer_info__r.maker_name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>メーカー（ワンプラ）</label>
    <type>Text</type>
</CustomField>