force-app/main/default/objects/Case_Task__c/fields/medium__c.field-meta.xml
<CustomField>
    <fullName>medium__c</fullName>
    <description>編集</description>
    <label>会員への返信方法</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>メール</fullName>
            </value>
            <value>
                <fullName>電話</fullName>
            </value>
            <value>
                <fullName>個人LINE</fullName>
            </value>
            <value>
                <fullName>個人Whatsapp</fullName>
            </value>
            <value>
                <fullName>指定なし</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>