force-app/main/default/objects/Case_Task__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>販売会員情報</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>Member1</relationshipName>
    <type>Lookup</type>
</CustomField>