force-app/main/default/objects/Case_Task__c/fields/memo_for_ivoice__c.field-meta.xml
<CustomField>
    <fullName>memo_for_ivoice__c</fullName>
    <label>請求関連　備考</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>