force-app/main/default/objects/Case_Task__c/fields/new_lot_cancel_request__c.field-meta.xml
<CustomField>
    <fullName>new_lot_cancel_request__c</fullName>
    <formula>task_oya__r.new_lot__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>キャンセル依頼から自動反映しています。</inlineHelpText>
    <label>新ロット（キャンセル依頼から取得）</label>
    <type>Text</type>
</CustomField>