force-app/main/default/objects/Case_Task__c/fields/order_info1__c.field-meta.xml
<CustomField>
    <fullName>order_info1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>陸送情報1</label>
    <referenceTo>order_info__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>order_info1</relationshipName>
    <type>Lookup</type>
</CustomField>