force-app/main/default/objects/Case_Task__c/fields/order_info2__c.field-meta.xml
<CustomField>
    <fullName>order_info2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>陸送情報2</label>
    <referenceTo>order_info__c</referenceTo>
    <relationshipLabel>対応タスク（販売） (陸送情報2)</relationshipLabel>
    <relationshipName>order_info2</relationshipName>
    <type>Lookup</type>
</CustomField>