force-app/main/default/objects/Case_Task__c/fields/order_info3__c.field-meta.xml
<CustomField>
    <fullName>order_info3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>陸送情報3</label>
    <referenceTo>order_info__c</referenceTo>
    <relationshipLabel>対応タスク（販売） (陸送情報3)</relationshipLabel>
    <relationshipName>order_info3</relationshipName>
    <type>Lookup</type>
</CustomField>