force-app/main/default/objects/Case_Task__c/fields/order_number__c.field-meta.xml
<CustomField>
    <fullName>order_number__c</fullName>
    <label>受注番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>