force-app/main/default/objects/Case_Task__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <description>ケースの発生源からデータが流れてくるため、どちらかにデータを追加するのではなく、それぞれに追加する必要がある</description>
    <label>発生源</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Web(SAM)</fullName>
            </value>
            <value>
                <fullName>Email(Sales)</fullName>
            </value>
            <value>
                <fullName>LINE(Sales)</fullName>
            </value>
            <value>
                <fullName>WhatsApp(Sales)</fullName>
            </value>
            <value>
                <fullName>Chatbot(Sales)</fullName>
            </value>
            <value>
                <fullName>オークション出品データ</fullName>
            </value>
            <value>
                <fullName>個別タスク</fullName>
            </value>
            <value>
                <fullName>Email（MarketingCloud）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>