force-app/main/default/objects/Case_Task__c/fields/origin_destination_name__c.field-meta.xml
<CustomField>
    <fullName>origin_destination_name__c</fullName>
    <label>発着地名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>