force-app/main/default/objects/Case_Task__c/fields/originating_department_sales__c.field-meta.xml
<CustomField>
    <fullName>originating_department_sales__c</fullName>
    <label>依頼元部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>