force-app/main/default/objects/Case_Task__c/fields/percent_request__c.field-meta.xml
<CustomField>
    <fullName>percent_request__c</fullName>
    <label>％オク値段提示</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>値段提示前</fullName>
            </value>
            <value>
                <fullName>値段提示済み</fullName>
            </value>
            <value>
                <fullName>%オクではない</fullName>
            </value>
            <value>
                <fullName>対象外</fullName>
                <isActive>false</isActive>
                <label>対象外</label>
            </value>
            <value>
                <fullName>提示済み</fullName>
                <isActive>false</isActive>
                <label>提示済み</label>
            </value>
            <value>
                <fullName>未提示</fullName>
                <isActive>false</isActive>
                <label>未提示</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>