force-app/main/default/objects/Case_Task__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>電話番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>