force-app/main/default/objects/Case_Task__c/fields/port__c.field-meta.xml
<CustomField>
    <fullName>port__c</fullName>
    <label>港</label>
    <length>255</length>
    <type>Text</type>
</CustomField>