force-app/main/default/objects/Case_Task__c/fields/purchase_opportunity__c.field-meta.xml
<CustomField>
    <fullName>purchase_opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>買取商談</label>
    <referenceTo>PurchaseOpportunity__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>case_task_po</relationshipName>
    <type>Lookup</type>
</CustomField>