force-app/main/default/objects/Case_Task__c/fields/Que__c.field-meta.xml
<CustomField>
    <fullName>Que__c</fullName>
    <description>ケースのキューをテキストで受け取るよう設定。
→公開グループを参照関係にすれば問題ないが、表示されないためキューの名称を連携。</description>
    <label>所有部署</label>
    <length>255</length>
    <type>Text</type>
</CustomField>