force-app/main/default/objects/Case_Task__c/fields/Relation_Activity__c.field-meta.xml
<CustomField>
    <fullName>Relation_Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>活動詳細（販売用）</label>
    <referenceTo>Relation_Activity__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>Relation_Activity_for_Case_Task</relationshipName>
    <type>Lookup</type>
</CustomField>