force-app/main/default/objects/Case_Task__c/fields/Relation_messaging_session__c.field-meta.xml
<CustomField>
    <fullName>Relation_messaging_session__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>関連するメッセージングユーザー</label>
    <referenceTo>MessagingEndUser</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>Relation_messaging_session</relationshipName>
    <type>Lookup</type>
</CustomField>