force-app/main/default/objects/Case_Task__c/fields/request_order_category_sales__c.field-meta.xml
<CustomField>
    <fullName>request_order_category_sales__c</fullName>
    <description>更新</description>
    <label>受けた依頼のカテゴリ</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>会員対応依頼</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>