force-app/main/default/objects/Case_Task__c/fields/Responder__c.field-meta.xml
<CustomField>
    <fullName>Responder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>このタスクの対応者（不要）所有者に変更</label>
    <referenceTo>User</referenceTo>
    <relationshipName>YVyT</relationshipName>
    <type>Lookup</type>
</CustomField>