force-app/main/default/objects/Case_Task__c/fields/response__c.field-meta.xml
<CustomField>
    <fullName>response__c</fullName>
    <description>編集</description>
    <label>折り返し</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>必要</fullName>
            </value>
            <value>
                <fullName>不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>