force-app/main/default/objects/Case_Task__c/fields/response_status_sales__c.field-meta.xml
<CustomField>
    <fullName>response_status_sales__c</fullName>
    <description>編集</description>
    <label>自部署対応状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未対応</fullName>
            </value>
            <value>
                <fullName>対応中</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>完了</fullName>
            </value>
            <value>
                <fullName>対応不要</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>