force-app/main/default/objects/Case_Task__c/fields/Sales_country__c.field-meta.xml
<CustomField>
    <fullName>Sales_country__c</fullName>
    <label>国</label>
    <length>255</length>
    <type>Text</type>
</CustomField>