force-app/main/default/objects/Case_Task__c/fields/Sales_inquiry__c.field-meta.xml
<CustomField>
    <fullName>Sales_inquiry__c</fullName>
    <label>問い合わせ内容</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>