force-app/main/default/objects/Case_Task__c/fields/Sales_kanri_num__c.field-meta.xml
<CustomField>
    <fullName>Sales_kanri_num__c</fullName>
    <label>管理番号</label>
    <length>255</length>
    <type>Text</type>
</CustomField>