force-app/main/default/objects/Case_Task__c/fields/Sales_member__c.field-meta.xml
<CustomField>
    <fullName>Sales_member__c</fullName>
    <label>会員名（問い合わせ時）</label>
    <length>255</length>
    <type>Text</type>
</CustomField>