force-app/main/default/objects/Case_Task__c/fields/Sales_memberid__c.field-meta.xml
<CustomField>
    <fullName>Sales_memberid__c</fullName>
    <label>会員ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>