force-app/main/default/objects/Case_Task__c/fields/Sales_name__c.field-meta.xml
<CustomField>
    <fullName>Sales_name__c</fullName>
    <label>氏名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>