force-app/main/default/objects/Case_Task__c/fields/Sales_phone__c.field-meta.xml
<CustomField>
    <fullName>Sales_phone__c</fullName>
    <label>電話番号（不要）</label>
    <type>Phone</type>
</CustomField>