force-app/main/default/objects/Case_Task__c/fields/select_pic_detail__c.field-meta.xml
<CustomField>
    <fullName>select_pic_detail__c</fullName>
    <label>共有アカウント用　タスク振り分け欄</label>
    <length>255</length>
    <type>Text</type>
</CustomField>