force-app/main/default/objects/Case_Task__c/fields/shipping_method__c.field-meta.xml
<CustomField>
    <fullName>shipping_method__c</fullName>
    <label>シッピング方法</label>
    <length>255</length>
    <type>Text</type>
</CustomField>