force-app/main/default/objects/Case_Task__c/fields/SNS_PIC__c.field-meta.xml
<CustomField>
    <fullName>SNS_PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SNS対応者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SNS_PIC</relationshipName>
    <type>Lookup</type>
</CustomField>