force-app/main/default/objects/Case_Task__c/fields/SourceSystem__c.field-meta.xml
<CustomField>
    <fullName>SourceSystem__c</fullName>
    <label>外部連携元システム名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>