force-app/main/default/objects/Case_Task__c/fields/ss_kanri_num__c.field-meta.xml
<CustomField>
    <fullName>ss_kanri_num__c</fullName>
    <formula>ss_offer_info__r.ss_kanri_num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>共有在庫管理番号</label>
    <type>Text</type>
</CustomField>