force-app/main/default/objects/Case_Task__c/fields/ss_offer_info__c.field-meta.xml
<CustomField>
    <fullName>ss_offer_info__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ワンプライス車両　申込管理</label>
    <referenceTo>ss_offer_info__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>ss_offer_info_relation_case_task</relationshipName>
    <type>Lookup</type>
</CustomField>