force-app/main/default/objects/Case_Task__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>ケースと連動。こちらで編集したら向こうにデータを返すため、項目を追加したらケース側の状況にも項目を同じように追加しなければならない。　　あ</description>
    <label>状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>未対応（New）</fullName>
            </value>
            <value>
                <fullName>進行中（In Progress）</fullName>
            </value>
            <value>
                <fullName>一時保留（On Hold）</fullName>
            </value>
            <value>
                <fullName>顧客からの返信待ち（Waiting for Customer）</fullName>
            </value>
            <value>
                <fullName>引き継ぎ（Escalated）</fullName>
            </value>
            <value>
                <fullName>返信あり（Response Received）</fullName>
            </value>
            <value>
                <fullName>他の案件と統合（Merged）</fullName>
            </value>
            <value>
                <fullName>クレーム対応中（Dispute in Review）</fullName>
            </value>
            <value>
                <fullName>個別依頼分</fullName>
            </value>
            <value>
                <fullName>完了（Closed）</fullName>
            </value>
            <value>
                <fullName>対応不要（No action required）</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>