force-app/main/default/objects/Case_Task__c/fields/sub_category__c.field-meta.xml
<CustomField>
    <fullName>sub_category__c</fullName>
    <label>依頼内容</label>
    <length>255</length>
    <type>Text</type>
</CustomField>