force-app/main/default/objects/Case_Task__c/fields/Supervisor_approval__c.field-meta.xml
<CustomField>
    <fullName>Supervisor_approval__c</fullName>
    <description>編集</description>
    <label>上長承認</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>承認</fullName>
            </value>
            <value>
                <fullName>確認中</fullName>
            </value>
            <value>
                <fullName>保留</fullName>
            </value>
            <value>
                <fullName>却下</fullName>
            </value>
            <value>
                <fullName>差し戻し</fullName>
            </value>
            <value>
                <fullName>未対応</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>