force-app/main/default/objects/Case_Task__c/fields/support_client__c.field-meta.xml
<CustomField>
    <fullName>support_client__c</fullName>
    <label>依頼者詳細</label>
    <length>255</length>
    <type>Text</type>
</CustomField>