force-app/main/default/objects/Case_Task__c/fields/task_oya__c.field-meta.xml
<CustomField>
    <fullName>task_oya__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>キャンセル依頼</label>
    <referenceTo>cancel_request__c</referenceTo>
    <relationshipLabel>対応タスク（販売）</relationshipLabel>
    <relationshipName>task_oya</relationshipName>
    <type>Lookup</type>
</CustomField>