force-app/main/default/objects/Case_Task__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>メール件名/タスクカテゴリ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>