force-app/main/default/objects/Case_Task__c/recordTypes/Cancel.recordType-meta.xml
<RecordType>
    <fullName>Cancel</fullName>
    <active>true</active>
    <label>キャンセル依頼</label>
</RecordType>