force-app/main/default/objects/Case_Task__c/recordTypes/member_support_default.recordType-meta.xml
<RecordType>
    <fullName>member_support_default</fullName>
    <active>true</active>
    <label>対応依頼（デフォルト）</label>
</RecordType>