force-app/main/default/objects/Case_Task__c/recordTypes/origin_destination_name_master.recordType-meta.xml
<RecordType>
    <fullName>origin_destination_name_master</fullName>
    <active>true</active>
    <label>発着地マスタ</label>
</RecordType>