force-app/main/default/objects/Case_Task__c/recordTypes/other_not_car_relation.recordType-meta.xml
<RecordType>
    <fullName>other_not_car_relation</fullName>
    <active>true</active>
    <label>車両に紐付かない依頼</label>
</RecordType>