force-app/main/default/objects/Case_Task__c/recordTypes/paypal_request.recordType-meta.xml
<RecordType>
    <fullName>paypal_request</fullName>
    <active>true</active>
    <label>PayPal請求</label>
</RecordType>