force-app/main/default/objects/Case_Task__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Member__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Origin__c</columns>
    <columns>Status__c</columns>
    <columns>EscalationDateTime__c</columns>
    <columns>contact_delay_flag__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>